Fix calculation of the number of Z-avatars

--- a/z_avatar_stats.ipynb
+++ b/z_avatar_stats.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "id": "759ea936",
       "metadata": {
         "id": "759ea936"
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "id": "54ca2eba",
       "metadata": {
         "id": "54ca2eba"
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 18,
       "metadata": {
         "id": "WD5Y3DpTyh98"
       },
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 19,
       "id": "3c12666f",
       "metadata": {
         "id": "3c12666f"
@@ -208,10 +208,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JdTGdLBjHZOD",
-        "outputId": "1d4b043a-f44c-403a-a08b-985e75e2b37f"
+        "outputId": "f0cc8a4b-5244-4d19-c69d-7269f845e2c1"
       },
       "id": "JdTGdLBjHZOD",
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,11 +245,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 21,
       "id": "79b9b7fd",
       "metadata": {
         "id": "79b9b7fd",
-        "outputId": "561347d7-b643-4afd-d57b-fccaf69eddc1",
+        "outputId": "a58c13c4-a083-4ed8-9af9-091f8c31757d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -260,12 +260,12 @@
           "name": "stdout",
           "text": [
             "==== GROUP: putin_z ====\n",
-            "Z_users: 683  (Z_users / with_photo: 0.0488)\n",
-            "Z_users seen during war: 47  (Z_users_seen / Z_users: 0.0688)\n",
+            "Z_users: 47  (Z_users / with_photo: 0.0034)\n",
+            "Z_users seen during war: 47  (Z_users_seen / Z_users: 1.0000)\n",
             "\n",
             "==== GROUP: random_around_24Feb ====\n",
-            "Z_users: 80  (Z_users / with_photo: 0.0014)\n",
-            "Z_users seen during war: 75  (Z_users_seen / Z_users: 0.9375)\n",
+            "Z_users: 77  (Z_users / with_photo: 0.0013)\n",
+            "Z_users seen during war: 75  (Z_users_seen / Z_users: 0.9740)\n",
             "\n"
           ]
         }
@@ -285,6 +285,9 @@
         "    else:\n",
         "        # Load the indices\n",
         "        user_idx_z = np.load(fpath_z_idx)\n",
+        "\n",
+        "    # Select users from the given time interval\n",
+        "    user_idx_z = np.asarray([i for i in user_idx_z if i in group['user_idx']])\n",
         "\n",
         "    # Z-users who was seen during the war\n",
         "    user_idx_z_seen_during_war = [user_id for user_id in user_idx_z\n",
@@ -329,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 22,
       "id": "1bdf5819",
       "metadata": {
         "id": "1bdf5819"
@@ -375,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 23,
       "id": "0a9e04aa",
       "metadata": {
         "id": "0a9e04aa"
@@ -417,14 +420,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 24,
       "id": "8b72b20e",
       "metadata": {
         "id": "8b72b20e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c20a1d47-3324-4d90-b7b7-19e2ebf230c0"
+        "outputId": "8f95c676-ed46-4959-c06c-ea1676e10dca"
       },
       "outputs": [
         {
@@ -456,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 25,
       "id": "5646dd13",
       "metadata": {
         "id": "5646dd13"
@@ -521,10 +524,10 @@
           "height": 362
         },
         "id": "7gtWWqDbHt-Y",
-        "outputId": "a6c051be-5fd4-455d-fb6b-d531d41976b7"
+        "outputId": "fce4c311-8c7a-4682-ef9e-4759807bda1b"
       },
       "id": "7gtWWqDbHt-Y",
-      "execution_count": 11,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
@@ -551,10 +554,10 @@
           "height": 362
         },
         "id": "6OuoHCx-HvTz",
-        "outputId": "101816bc-f830-4f30-f6d2-293ef3e2ee07"
+        "outputId": "d4296583-02f2-4ff1-f52e-44ee93cdaf5e"
       },
       "id": "6OuoHCx-HvTz",
-      "execution_count": 12,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -580,7 +583,7 @@
         "id": "5qXCggY9HwsG"
       },
       "id": "5qXCggY9HwsG",
-      "execution_count": 13,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -596,10 +599,10 @@
           "height": 362
         },
         "id": "aqO6WcuRHyl0",
-        "outputId": "7ba8460a-86b2-4e03-eb2d-3f1d7fd0f7b3"
+        "outputId": "36f6e650-fdd7-44ae-d2f0-8e7b1cf32c4c"
       },
       "id": "aqO6WcuRHyl0",
-      "execution_count": 14,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -628,10 +631,10 @@
           "height": 439
         },
         "id": "YjOjlrw6Hz6D",
-        "outputId": "3feadbb8-70da-4836-f37e-c16beb86de03"
+        "outputId": "0d949236-cad7-4961-b0f3-fe425efb3a1e"
       },
       "id": "YjOjlrw6Hz6D",
-      "execution_count": 15,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
